--- a/css/main.css
+++ b/css/main.css
@@ -5,17 +5,114 @@ html, body {
     padding: 0;
 }
 
-h1 {
-    position: fixed;
-    z-index: 5;
-    text-align: center;
-    margin: auto;
-    color: white;
-    width: 100%;
-    padding: 15px 0;
-    background: rgb(94, 201, 174);
-}
-
 div#map {
     height: 100%;
+    width: 100%;
+}
+
+h1 {
+    text-align: center;
+    margin: auto;
+    color: rgb(94, 201, 174);
+    width: 100%;
+    padding: 20px 0;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: fixed;
+    float: right;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    box-shadow: rgba(0,0,0,0.75) 0 2px 4px;
+    
+}
+
+button#search {
+    background: rgb(94, 201, 174);
+    border: none;
+}
+button#back {
+    background: white;
+    border: none;
+}
+
+button#search svg {
+    width: 30px;
+    height: 30px;
+    top: 50%;
+    left: 50%;
+    margin: -15px 0 0 -15px;
+    position: absolute;
+}
+button#back svg{
+    width: 40px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+    margin: -20px 0 0 -20px;
+    position: absolute;
+}
+
+button#search svg path{
+    fill: white;
+}
+
+button#search:hover {
+    background: white;
+    transition: 0.3s ease;
+}
+
+button#search:hover svg path {
+    fill: rgb(94, 201, 174);
+    transition: 0.3s ease;
+}
+button#back:hover {
+    background: black;
+    transition: 0.3s ease;
+}
+
+button#back:hover svg {
+    stroke: white;
+    transition: 0.3s ease;
+}
+
+
+.map {
+    float: right;
+    height: 100%;
+    position: absolute;
+    left: 100%;
+    width: 0;
+    transition: 0.5s ease;
+}
+
+.home {
+    float: left;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    left: 0;
+    transition: 0.5s ease;
+}
+
+div.active {
+    width: 100%;
+    left: 0;
+    transition: 0.5s ease;
+}
+
+div.innactive {
+    width: 0;
+    transition: 0.5s ease;
+    left: -100%;
+}
+
+button.innactive {
+    display: none;
 }
