--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,11 @@ button#back:hover svg {
     position: relative;
     text-align: center;
     font-weight: 300;
-    padding: 10px 0 0;
+    padding: 30px 0 0;
+}
+
+p.tagline {
+    font-size: 22px;
 }
 
 .home input#distance {
@@ -109,7 +113,7 @@ button#back:hover svg {
     width: 150px;
     height: 40px;
     margin: 30px auto 0;
-    padding: 10px 5px;
+    padding: 10px;
     color: rgb(94, 201, 174);
     font-size: 16px;
     border-radius: 5px;
@@ -125,4 +129,43 @@ button#back:hover svg {
 }
 .home input#distance::-webkit-input-placeholder {
     color: rgba(0,0,0,0.5);
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+}
+
+p.disclaimer {
+    font-size: 16px;
+    color: rgb(203, 214, 212);
+}
+.copyright {
+    color: rgb(203, 214, 212);
+    font-size: 16px;
+    display: block;
+    padding: 0 0 0 20px;
+    float: left;
+}
+
+footer div {
+    position: relative;
+    width: 99%;
+    padding: 10px 0;
+    margin: auto;
+}
+a.github {
+    color: white;
+    font-size: 18px;
+    float: left;
+    margin: 0 0 0 38%;
+    text-decoration: none;
+    padding-bottom: 8px;
+}
+a.github:hover {
+    padding-bottom: 2px;
+    border-bottom: 2px white solid;
+    transition: 0.3s ease;
 }
